--- a/api-project/index.html
+++ b/api-project/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <div class ="container"></div>
+    <h1>i</h1>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
