--- a/api-project/index.html
+++ b/api-project/index.html
@@ -8,8 +8,16 @@
   </head>
   <body>
     <div id="app"></div>
-    <div class ="container"></div>
-    <h1></h1>
-    <script type="module" src="/main.js"></script>
+    <h1>Get To Know Valorant Agents</h1>
+    <div class ="container">
+    <button class = "Duelists"> Duelists </button>
+    <button class = "Controllers"> Controllers </button>
+    <button class = "Sentinels"> Sentinels </button>
+    <button class = "Initiator"> Initiator </button>
+
+
+    </div>
+  
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
