--- a/api-project/index.html
+++ b/api-project/index.html
@@ -9,16 +9,24 @@
   <body>
     <div id="app"></div>
     <h1>Get To Know Valorant Agents</h1>
-    <div class ="container">
+
     <button class = "Duelists"> Duelists </button>
     <button class = "Controllers"> Controllers </button>
     <button class = "Sentinels"> Sentinels </button>
     <button class = "Initiator"> Initiator </button>
 
 
-    </div>
-  
 
+  
+<div class="container">
+     <!--  <div class="card">
+        <h3>sea creature</h3>
+
+        <img src="https://catholicfootnotes.files.wordpress.com/2021/07/blobfish.jpeg?w=640" alt= "" class ="cardimg">
+        <h4>sea creature!</h4>
+        <button class="btn">remove</button>
+    </div>  -->
+</div>
 
   
     <script type="module" src="./js/main.js"></script>
