--- a/api-project/index.html
+++ b/api-project/index.html
@@ -6,29 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
   <body>
-    <div id="app"></div>
-    <h1>Get To Know Valorant Agents</h1>
+    <h1 class = "cardtitle"> Holidays :3</h1>
 
-    <button class = "Duelists"> Duelists </button>
-    <button class = "Controllers"> Controllers </button>
-    <button class = "Sentinels"> Sentinels </button>
-    <button class = "Initiator"> Initiator </button>
+      <form action="" id = "form">
+      <input title="search" type="text" name="searchname" placeholder="search for a country code" class="searchname">
+      <input type="submit" id="submit" value="click to submit">
 
 
-
-  
-<div class="container">
-     <!--  <div class="card">
-        <h3>sea creature</h3>
-
-        <img src="https://catholicfootnotes.files.wordpress.com/2021/07/blobfish.jpeg?w=640" alt= "" class ="cardimg">
-        <h4>sea creature!</h4>
-        <button class="btn">remove</button>
-    </div>  -->
-</div>
-
-  
-    <script type="module" src="./js/main.js"></script>
+    <h2 class="h2"></h2>
+    <div class = "container">
+<!--      div class="card">
+        <h2 class="name">${countryCode.name}</h2>
+      </div>` -->
+    </div>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
