--- a/api-project/index.html
+++ b/api-project/index.html
@@ -11,17 +11,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
   <body>
     <h1 class = "cardtitle"> Holidays :3</h1>
-
+    <h2 class="h2">You Will Not Be Seeing Any Flags Sorry For The Inconvenience</h2>
       <form action="" id = "form">
       <input title="search" type="text" name="searchname" placeholder="search for a country code" class="searchname">
       <input type="submit" id="submit" value="click to submit">
 
 
-    <h2 class="h2"></h2>
+
     <div class = "container">
 <!--      div class="card">
         <h2 class="name">${countryCode.name}</h2>
       </div>` -->
+
     </div>
     <script type="module" src="./main.js"></script>
   </body>
